--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -14,7 +14,7 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_NAMESPACES=y
-CONFIG_BLK_DEV_INITRD=n
+CONFIG_BLK_DEV_INITRD=y
 # CONFIG_KALLSYMS is not set
 CONFIG_EMBEDDED=y
 CONFIG_SLAB=y
@@ -74,14 +74,12 @@ CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_FASTMAP=y
 CONFIG_MTD_UBI_GLUEBI=m
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_RAM=n
+CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_COUNT=4
 CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_ATMEL_TCLIB=y
 CONFIG_ATMEL_SSC=y
-CONFIG_EEPROM_AT24=n
 CONFIG_SCSI=y
-CONFIG_BLK_DEV_SD=n
 # CONFIG_SCSI_LOWLEVEL is not set
 CONFIG_MICREL_PHY=y
 CONFIG_LIBERTAS_THINFIRM=m
@@ -140,7 +138,7 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
-CONFIG_USB_SERIAL=n
+CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_GENERIC=y
 CONFIG_USB_SERIAL_FTDI_SIO=y
 CONFIG_USB_SERIAL_PL2303=y
@@ -157,7 +155,6 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_AT91=y
 CONFIG_MMC_ATMELMCI=y
-CONFIG_RTC_CLASS=n
 CONFIG_DMADEVICES=y
 CONFIG_AT_HDMAC=y
 
@@ -222,6 +219,7 @@ CONFIG_BLK_DEV=y
 CONFIG_TTY_PRINTK=y
 
 #HERE
+CONFIG_MMC_TEST=y
 CONFIG_SPI_DEBUG=y
 CONFIG_MMC_SPI=y
 CONFIG_DMADEVICES_DEBUG=y
@@ -298,5 +296,9 @@ CONFIG_HAVE_FTRACE=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
 CONFIG_INITCALL_DEBUG=y
-CONFIG_DEBUG=y
-CONFIG_INITRAMFS_SOURCE="./init.cpio.gz"
+CONFIG_DEBUG=y	
+#CONFIG_INITRAMFS_SOURCE="~/buildroot/output/images/rootfs.cpio.gz"
+CONFIG_EXT2_FS=y
+CONFIG_RD_GZIP=y
+CONFIG_TEST_LKM=y
+CONFIG_FUSE_FS=y
