Added cd gpio into device tree p_a5_tab

--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -55,7 +55,7 @@
 			 cd-inverted; 
 			broken-cd;
 			*/
-			broken-cd;
+			cd-gpios = <&pioA 13 GPIO_ACTIVE_LOW>;
 			non-removable;
 			mmc-ddr-1_8v;
 			status = "okay";
