--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -31,57 +31,7 @@
 	};
 
 	ahb {
-		usb1: ohci@00400000 {
-			num-ports = <3>;
-			atmel,vbus-gpio = <0
-					   &pioA PIN_PB12 GPIO_ACTIVE_HIGH
-					   0
-					  >;
-			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_usb_default>;
-			status = "okay";
-		};
-
-		usb2: ehci@00500000 {
-			status = "okay";
-		};
-
-		sdmmc0: sdio-host@a0000000 {
-			compatible= "atmel,sama5d2-sdhci";
-			bus-width = <8>;
-			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_sdmmc0_default>;
-			non-removable;
-			mmc-ddr-1_8v;
-			status = "okay";
-		};
-
 		apb {
-			spi0: spi@f8000000 {
-				pinctrl-names = "default";
-				pinctrl-0 = <&pinctrl_spi0_default>;
-				status = "okay";
-			};
-
-			flx1: flexcom@f8038000 {
-				atmel,flexcom-mode = <ATMEL_FLEXCOM_MODE_USART>;
-				status = "okay";
-
-				uart5: serial@200 {
-					compatible = "atmel,at91sam9260-usart";
-					reg = <0x200 0x200>;
-					interrupts = <20 IRQ_TYPE_LEVEL_HIGH 7>;
-					#address-cells = <1>;
-					#size-cells = <0>;
-					clocks = <&flx1_clk>;
-					clock-names = "usart";
-					pinctrl-names = "default";
-					pinctrl-0 = <&pinctrl_flx1_default>;
-					atmel,fifo-size = <32>;
-					status = "okay";
-				};
-			};
-
 			watchdog@f8048040 {
 				status = "okay";
 			};
@@ -180,3 +130,51 @@
 	};
 
 };
+
+&flx1 {
+	atmel,flexcom-mode = <ATMEL_FLEXCOM_MODE_USART>;
+	status = "okay";
+
+	uart5: serial@200 {
+		compatible = "atmel,at91sam9260-usart";
+		reg = <0x200 0x200>;
+		interrupts = <20 IRQ_TYPE_LEVEL_HIGH 7>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		clocks = <&flx1_clk>;
+		clock-names = "usart";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_flx1_default>;
+		atmel,fifo-size = <32>;
+		status = "okay";
+	};
+};
+
+&sdmmc0 {
+	compatible= "atmel,sama5d2-sdhci";
+	bus-width = <8>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_sdmmc0_default>;
+	non-removable;
+	mmc-ddr-1_8v;
+	status = "okay";
+};
+
+&spi0 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_spi0_default>;
+	status = "okay";
+};
+
+&usb1 {
+	num-ports = <3>;
+	atmel,vbus-gpio = <0 &pioA PIN_PB12 GPIO_ACTIVE_HIGH 0>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usb_default>;
+	status = "okay";
+};
+
+&usb2 {
+	status = "okay";
+};
+
