--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -36,80 +36,6 @@
 				status = "okay";
 			};
 
-			pinctrl@fc038000 {
-				pinctrl_flx1_default: flx1_default {
-					pinmux = <PIN_PA24__FLEXCOM1_IO0>,
-						 <PIN_PA23__FLEXCOM1_IO1>;
-					bias-disable;
-				};
-
-				pinctrl_key_gpio_default: key_gpio_default {
-					pinmux = <PIN_PA10__GPIO>;
-					bias-pull-up;
-				};
-
-				pinctrl_sdmmc0_default: sdmmc0_default {
-					cmd_data {
-						pinmux = <PIN_PA1__SDMMC0_CMD>,
-							 <PIN_PA2__SDMMC0_DAT0>,
-							 <PIN_PA3__SDMMC0_DAT1>,
-							 <PIN_PA4__SDMMC0_DAT2>,
-							 <PIN_PA5__SDMMC0_DAT3>,
-							 <PIN_PA6__SDMMC0_DAT4>,
-							 <PIN_PA7__SDMMC0_DAT5>,
-							 <PIN_PA8__SDMMC0_DAT6>,
-							 <PIN_PA9__SDMMC0_DAT7>;
-						bias-pull-up;
-					};
-
-					ck_cd_vddsel {
-						pinmux = <PIN_PA0__SDMMC0_CK>,
-							 <PIN_PA11__SDMMC0_VDDSEL>,
-							 <PIN_PA13__SDMMC0_CD>;
-						bias-disable;
-					};
-				};
-
-				pinctrl_spi0_default: spi0_default {
-					pinmux = <PIN_PA14__SPI0_SPCK>,
-						 <PIN_PA15__SPI0_MOSI>,
-						 <PIN_PA16__SPI0_MISO>,
-						 <PIN_PA17__SPI0_NPCS0>;
-					bias-disable;
-				};
-
-				pinctrl_spi1_default: spi1_default {
-					pinmux = <PIN_PC1__SPI1_SPCK>,
-						 <PIN_PC2__SPI1_MOSI>,
-						 <PIN_PC3__SPI1_MISO>,
-						 <PIN_PC4__SPI1_NPCS0>;
-					bias-disable;
-				};
-
-				pinctrl_uart0_default: uart0_default {
-					pinmux = <PIN_PB26__URXD0>,
-						 <PIN_PB27__UTXD0>;
-					bias-disable;
-				};
-
-				pinctrl_uart2_default: uart2_default {
-					pinmux = <PIN_PD23__URXD2>,
-						 <PIN_PD24__UTXD2>;
-					bias-disable;
-				};
-
-				pinctrl_usb_default: usb_default {
-					pinmux = <PIN_PB12__GPIO>;
-					bias-disable;
-				};
-
-				pinctrl_usba_vbus: usba_vbus {
-					pinmux = <PIN_PB11__GPIO>;
-					bias-disable;
-				};
-
-			};
-
 			ptc@fc060000 {
 				status = "okay";
 			};
@@ -147,6 +73,79 @@
 		pinctrl-0 = <&pinctrl_flx1_default>;
 		atmel,fifo-size = <32>;
 		status = "okay";
+	};
+};
+
+&pioA {
+	pinctrl_flx1_default: flx1_default {
+		pinmux = <PIN_PA24__FLEXCOM1_IO0>,
+			 <PIN_PA23__FLEXCOM1_IO1>;
+		bias-disable;
+	};
+
+	pinctrl_key_gpio_default: key_gpio_default {
+		pinmux = <PIN_PA10__GPIO>;
+		bias-pull-up;
+	};
+
+	pinctrl_sdmmc0_default: sdmmc0_default {
+		cmd_data {
+			pinmux = <PIN_PA1__SDMMC0_CMD>,
+				 <PIN_PA2__SDMMC0_DAT0>,
+				 <PIN_PA3__SDMMC0_DAT1>,
+				 <PIN_PA4__SDMMC0_DAT2>,
+				 <PIN_PA5__SDMMC0_DAT3>,
+				 <PIN_PA6__SDMMC0_DAT4>,
+				 <PIN_PA7__SDMMC0_DAT5>,
+				 <PIN_PA8__SDMMC0_DAT6>,
+				 <PIN_PA9__SDMMC0_DAT7>;
+			bias-pull-up;
+		};
+
+		ck_cd_vddsel {
+			pinmux = <PIN_PA0__SDMMC0_CK>,
+				 <PIN_PA11__SDMMC0_VDDSEL>,
+				 <PIN_PA13__SDMMC0_CD>;
+			bias-disable;
+		};
+	};
+
+	pinctrl_spi0_default: spi0_default {
+		pinmux = <PIN_PA14__SPI0_SPCK>,
+			 <PIN_PA15__SPI0_MOSI>,
+			 <PIN_PA16__SPI0_MISO>,
+			 <PIN_PA17__SPI0_NPCS0>;
+		bias-disable;
+	};
+
+	pinctrl_spi1_default: spi1_default {
+		pinmux = <PIN_PC1__SPI1_SPCK>,
+			 <PIN_PC2__SPI1_MOSI>,
+			 <PIN_PC3__SPI1_MISO>,
+			 <PIN_PC4__SPI1_NPCS0>;
+		bias-disable;
+	};
+
+	pinctrl_uart0_default: uart0_default {
+		pinmux = <PIN_PB26__URXD0>,
+			 <PIN_PB27__UTXD0>;
+		bias-disable;
+	};
+
+	pinctrl_uart2_default: uart2_default {
+		pinmux = <PIN_PD23__URXD2>,
+			 <PIN_PD24__UTXD2>;
+		bias-disable;
+	};
+
+	pinctrl_usb_default: usb_default {
+		pinmux = <PIN_PB12__GPIO>;
+		bias-disable;
+	};
+
+	pinctrl_usba_vbus: usba_vbus {
+		pinmux = <PIN_PB11__GPIO>;
+		bias-disable;
 	};
 };
 
