--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -1,21 +1,17 @@
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
-CONFIG_FHANDLE=y
-CONFIG_POSIX_MQUEUE=y
 CONFIG_IRQ_DOMAIN_DEBUG=y
-CONFIG_LOG_BUF_SHIFT=16
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_CGROUPS=y
+CONFIG_LOG_BUF_SHIFT=16
 CONFIG_MEMCG=y
-CONFIG_CGROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_NAMESPACES=y
+CONFIG_SCHED_AUTOGROUP=y
 CONFIG_BLK_DEV_INITRD=y
-# CONFIG_KALLSYMS is not set
 CONFIG_EMBEDDED=y
 CONFIG_SLAB=y
 CONFIG_JUMP_LABEL=y
@@ -26,7 +22,6 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 # CONFIG_BLK_DEV_BSG is not set
 # CONFIG_IOSCHED_DEADLINE is not set
 # CONFIG_IOSCHED_CFQ is not set
-CONFIG_SERIAL_EARLYCON=y
 CONFIG_ARCH_AT91=y
 CONFIG_SOC_SAMA5D2=y
 CONFIG_AEABI=y
@@ -41,26 +36,17 @@ CONFIG_ZBOOT_ROM_BSS=0x0
 CONFIG_CMDLINE="console=ttyS0,115200 initcall_debug root=/dev/mmcblk0 rw rootwait"
 CONFIG_KEXEC=y
 CONFIG_CPU_IDLE=y
-CONFIG_NEON=y
-CONFIG_KERNEL_MODE_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_PM_DEBUG=y
-CONFIG_PM_ADVANCED_DEBUG=y=y
-CONFIG_INET=y
-CONFIG_CAN=y
-CONFIG_CAN_AT91=y
-CONFIG_CAN_M_CAN=y
-CONFIG_CFG80211=y
-# CONFIG_CFG80211_DEFAULT_PS is not set
-CONFIG_CFG80211_WEXT=y
-CONFIG_MAC80211=y
-CONFIG_RFKILL=y
-CONFIG_RFKILL_REGULATOR=y
+CONFIG_PM_ADVANCED_DEBUG=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
+CONFIG_DEBUG_DRIVER=y
+CONFIG_DEBUG_DEVRES=y
+CONFIG_FENCE_TRACE=y
 CONFIG_DMA_CMA=y
 CONFIG_MTD=y
 CONFIG_MTD_TESTS=m
@@ -81,14 +67,9 @@ CONFIG_ATMEL_TCLIB=y
 CONFIG_ATMEL_SSC=y
 CONFIG_SCSI=y
 # CONFIG_SCSI_LOWLEVEL is not set
-CONFIG_MICREL_PHY=y
-CONFIG_LIBERTAS_THINFIRM=m
-CONFIG_LIBERTAS_THINFIRM_USB=m
-CONFIG_MWIFIEX=m
-CONFIG_MWIFIEX_SDIO=m
-CONFIG_MWIFIEX_USB=m
 # CONFIG_INPUT_MOUSEDEV is not set
 CONFIG_INPUT_EVDEV=y
+CONFIG_INPUT_EVBUG=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
@@ -96,29 +77,34 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_ATMEL_PTC=m
 # CONFIG_SERIO is not set
 CONFIG_LEGACY_PTY_COUNT=4
-
 CONFIG_SERIAL_ATMEL=y
 CONFIG_SERIAL_ATMEL_CONSOLE=y
+CONFIG_TTY_PRINTK=y
 CONFIG_HW_RANDOM=y
+CONFIG_I2C_DEBUG_CORE=y
+CONFIG_I2C_DEBUG_ALGO=y
+CONFIG_I2C_DEBUG_BUS=y
 CONFIG_SPI=y
+CONFIG_SPI_DEBUG=y
 CONFIG_SPI_ATMEL=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_SPIDEV=m
+CONFIG_PINCTRL_AT91=y
+CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
-CONFIG_POWER_SUPPLY=y
 CONFIG_POWER_RESET=y
+CONFIG_POWER_SUPPLY=y
+CONFIG_POWER_SUPPLY_DEBUG=y
 # CONFIG_HWMON is not set
 CONFIG_WATCHDOG=y
 CONFIG_AT91SAM9X_WATCHDOG=y
-
 CONFIG_MFD_ATMEL_FLEXCOM=y
 CONFIG_MFD_ATMEL_HLCDC=y
-
 CONFIG_REGULATOR=y
+CONFIG_REGULATOR_DEBUG=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_VIRTUAL_CONSUMER=y
 CONFIG_REGULATOR_ACT8865=y
-CONFIG_REGULATOR_ACT8945A=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
@@ -138,30 +124,26 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
+CONFIG_USB_STORAGE_DEBUG=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_GENERIC=y
 CONFIG_USB_SERIAL_FTDI_SIO=y
 CONFIG_USB_SERIAL_PL2303=y
-CONFIG_USB_ATMEL_USBA=m
-CONFIG_USB_CONFIGFS=m
-CONFIG_USB_CONFIGFS_ACM=y
-CONFIG_USB_CONFIGFS_MASS_STORAGE=y
-CONFIG_USB_ZERO=m
-CONFIG_USB_MASS_STORAGE=m
-CONFIG_USB_G_SERIAL=m
+CONFIG_USB_SERIAL_DEBUG=y
 CONFIG_MMC=y
+CONFIG_MMC_DEBUG=y
 # CONFIG_MMC_BLOCK_BOUNCE is not set
+CONFIG_MMC_TEST=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_AT91=y
 CONFIG_MMC_ATMELMCI=y
+CONFIG_MMC_SPI=y
 CONFIG_DMADEVICES=y
+CONFIG_DMADEVICES_DEBUG=y
+CONFIG_DMADEVICES_VDEBUG=y
 CONFIG_AT_HDMAC=y
-
 CONFIG_AT_XDMAC=y
-
-CONFIG_STAGING=n
-CONFIG_WILC1000_SDIO=m
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_IIO=y
 CONFIG_AT91_ADC=y
@@ -170,63 +152,26 @@ CONFIG_PWM=y
 CONFIG_PWM_ATMEL=y
 CONFIG_PWM_ATMEL_HLCDC_PWM=y
 CONFIG_PWM_ATMEL_TCB=y
+CONFIG_STM=y
+CONFIG_EXT2_FS=y
 CONFIG_EXT4_FS=y
+CONFIG_EXT4_DEBUG=y
 CONFIG_FANOTIFY=y
+CONFIG_FUSE_FS=y
 CONFIG_OVERLAY_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
-CONFIG_CONFIGFS_FS=y
 CONFIG_UBIFS_FS=y
 CONFIG_UBIFS_FS_ADVANCED_COMPR=y
-CONFIG_NFS_FS=y
-CONFIG_ROOT_NFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_CODEPAGE_850=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
-CONFIG_STRIP_ASM_SYMS=y
-CONFIG_DEBUG_FS=y
-CONFIG_DEBUG_MEMORY_INIT=y
-# CONFIG_FTRACE is not set
-CONFIG_DEBUG_USER=y
-CONFIG_DEBUG_LL=y
-CONFIG_KEYS=y
-CONFIG_CRYPTO_USER_API_HASH=m
-CONFIG_CRYPTO_USER_API_SKCIPHER=m
-CONFIG_CRYPTO_DEV_ATMEL_AES=y
-CONFIG_CRYPTO_DEV_ATMEL_TDES=y
-CONFIG_CRYPTO_DEV_ATMEL_SHA=y
-
-CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE_OVERRIDE=y
-CONFIG_DEBUG_INFO=y
-CONFIG_DEBUG_KERNEL=y
-CONFIG_DEBUG_UART_PHYS=0xf8038200
-CONFIG_DEBUG_UART_VIRT=0xf7038200
-CONFIG_MMC_DEBUG=y
-CONFIG_DEBUG_ERRORS=y
-CONFIG_DEBUG_SLAB=y
-CONFIG_DEBUG_GPIO=y
-CONFIG_POWER_SUPPLY_DEBUG=y
-CONFIG_REGULATOR_DEBUG=y
-CONFIG_EARLY_PRINTK=y
-
-CONFIG_DEBUG_DRIVER=y
-CONFIG_DEBUG_DEVRES=y
-CONFIG_FENCE_TRACE=y
-# CONFIG_BLK_DEV_NULL_BLK=y
-CONFIG_BLK_DEV=y
-CONFIG_TTY_PRINTK=y
-
-#HERE
-CONFIG_MMC_TEST=y
-CONFIG_SPI_DEBUG=y
-CONFIG_MMC_SPI=y
-CONFIG_DMADEVICES_DEBUG=y
-CONFIG_STM=y
-CONFIG_EXT4_DEBUG=y
 CONFIG_PRINTK_TIME=y
-# CONFIG_DEBUG_PAGEALLOC=y
+CONFIG_DYNAMIC_DEBUG=y
+CONFIG_DEBUG_INFO=y
+CONFIG_STRIP_ASM_SYMS=y
+CONFIG_DEBUG_PAGEALLOC=y
 CONFIG_DEBUG_OBJECTS=y
 CONFIG_DEBUG_OBJECTS_SELFTEST=y
 CONFIG_DEBUG_OBJECTS_FREE=y
@@ -234,18 +179,20 @@ CONFIG_DEBUG_OBJECTS_TIMERS=y
 CONFIG_DEBUG_OBJECTS_WORK=y
 CONFIG_DEBUG_OBJECTS_RCU_HEAD=y
 CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=y
+CONFIG_DEBUG_SLAB=y
 CONFIG_DEBUG_SLAB_LEAK=y
+CONFIG_DEBUG_KMEMLEAK=y
+CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
 CONFIG_DEBUG_STACK_USAGE=y
-# CONFIG_DEBUG_VM_VMACACHE=y
+CONFIG_DEBUG_VM=y
+CONFIG_DEBUG_VM_VMACACHE=y
 CONFIG_DEBUG_VM_RB=y
 CONFIG_DEBUG_VM_PGFLAGS=y
-# CONFIG_DEBUG_SHIRQ=y
+CONFIG_DEBUG_MEMORY_INIT=y
+CONFIG_DEBUG_SHIRQ=y
+CONFIG_LOCKUP_DETECTOR=y
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
-
-# CONFIG_DEBUG_VM=y
-CONFIG_LOCKUP_DETECTOR=y
-CONFIG_DETECT_HUNG_TASK=y
 CONFIG_WQ_WATCHDOG=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_SCHEDSTATS=y
@@ -253,52 +200,22 @@ CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_DEBUG_TIMEKEEPING=y
 CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_RT_MUTEXES=y
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_STACKTRACE=y
-CONFIG_DEBUG_KOBJECT=y
-# CONFIGU_DEBUG_LIST=y
-CONFIG_DEBUG_NOTIFIERS=y
-CONFIG_NOTIFIER_ERROR_INJECTION=y
-CONFIG_USB_G_DBGP_PRINTK=y
-CONFIG_INPUT_EVBUG=y
-CONFIG_I2C_DEBUG_CORE=y
-CONFIG_I2C_DEBUG_ALGO=y
-CONFIG_I2C_DEBUG_BUS=y
-CONFIG_PINCTRL_AT91=y
-CONFIG_DMADEVICES_VDEBUG=y
-CONFIG_DYNAMIC_DEBUG=y
-CONFIG_KGDB=y
-CONFIG_DEBUG_BLK_CGROUP=y
-CONFIG_DEBUG_BLOCK_EXT_DEVT=y
-CONFIG_DEBUG_KMEMLEAK=y
-CONFIG_DEBUG_LOCKDEP=y
 CONFIG_DEBUG_LOCK_ALLOC=y
-CONFIG_DEBUG_MUTEXES=y
-CONFIG_DEBUG_PAGEALLOC=y
-CONFIG_PINCTRL=y
-CONFIG_DEBUG_PREEMPT=y
+CONFIG_DEBUG_LOCKDEP=y
+CONFIG_DEBUG_KOBJECT=y
 CONFIG_DEBUG_SG=y
-CONFIG_DEBUG_SHIRQ=y
-CONFIG_CMDLINE_DEBUG=y
-CONFIG_DEBUG_STACKOVERFLOW=y
-CONFIG_DEBUG_VM=y
-CONFIG_DEBUG_VM_VMACACHE=y
-CONFIG_DM_DEBUG=y
-CONFIG_DM_DEBUG_BLOCK_STACK_TRACING=y
-CONFIG_FAULT_INJECTION_DEBUG_FS=y
-CONFIG_MEMSTICK_DEBUG=y
-CONFIG_RTC_DEBUG=y
-CONFIG_SCHED_DEBUG=y
-CONFIG_USB_GADGET_DEBUG=y
-CONFIG_USB_SERIAL_DEBUG=y
-CONFIG_USB_STORAGE_DEBUG=y
-CONFIG_HAVE_FTRACE=y
-CONFIG_SCHED_AUTOGROUP=y
-CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
-CONFIG_INITCALL_DEBUG=y
-CONFIG_DEBUG=y	
-#CONFIG_INITRAMFS_SOURCE="~/buildroot/output/images/rootfs.cpio.gz"
-CONFIG_EXT2_FS=y
-CONFIG_RD_GZIP=y
-CONFIG_TEST_LKM=y
-CONFIG_FUSE_FS=y
+CONFIG_DEBUG_NOTIFIERS=y
+CONFIG_DEBUG_BLOCK_EXT_DEVT=y
+CONFIG_NOTIFIER_ERROR_INJECTION=y
+# CONFIG_FTRACE is not set
+CONFIG_TEST_LKM=m
+CONFIG_KGDB=y
+CONFIG_DEBUG_USER=y
+CONFIG_DEBUG_LL=y
+CONFIG_DEBUG_UART_PHYS=0xf8038200
+CONFIG_DEBUG_UART_VIRT=0xf7038200
+CONFIG_EARLY_PRINTK=y
+CONFIG_KEYS=y
+CONFIG_CRYPTO_DEV_ATMEL_AES=y
+CONFIG_CRYPTO_DEV_ATMEL_TDES=y
+CONFIG_CRYPTO_DEV_ATMEL_SHA=y
