Modified serial path and enable usb serial console

--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -13,7 +13,7 @@
 	compatible = "p_a5_tab_reva", "atmel,sama5d2", "atmel,sama5";
 
 	aliases {
-		serial0 = &uart5;
+		serial0 = &usb1;
 	};
 
 	chosen {
