Removed usb1 address, debug stack usage and printk

--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -216,7 +216,7 @@ CONFIG_DEBUG_USER=y
 CONFIG_DEBUG_LL=y
 CONFIG_DEBUG_UART_PHYS=0xf8038200
 CONFIG_DEBUG_UART_VIRT=0xf7038200
-CONFIG_EARLY_PRINTK=y
+CONFIG_EARLY_PRINTK=n
 CONFIG_KEYS=y
 CONFIG_CRYPTO_DEV_ATMEL_AES=y
 CONFIG_CRYPTO_DEV_ATMEL_TDES=y
