--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -13,7 +13,7 @@
 	compatible = "p_a5_tab_reva", "atmel,sama5d2", "atmel,sama5";
 
 	aliases {
-		serial0 = &usb1;
+		serial0 = &uart5;
 	};
 
 	chosen {
@@ -32,9 +32,6 @@
 
 	ahb {
 		apb {
-			watchdog@f8048040 {
-				status = "okay";
-			};
 
 			ptc@fc060000 {
 				status = "okay";
