CONFIGS: Disabled different kernel debugging messages.

--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
-CONFIG_IRQ_DOMAIN_DEBUG=y
+CONFIG_IRQ_DOMAIN_DEBUG=n
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_LOG_BUF_SHIFT=16
 CONFIG_MEMCG=y
@@ -26,27 +26,27 @@ CONFIG_ARCH_AT91=y
 CONFIG_SOC_SAMA5D2=y
 CONFIG_AEABI=y
 CONFIG_CMA=y
-#CONFIG_CMA_DEBUG=y
-#CONFIG_CMA_DEBUGFS=y
+CONFIG_CMA_DEBUG=n
+CONFIG_CMA_DEBUGFS=n
 CONFIG_FORCE_MAX_ZONEORDER=15
 CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_ATAGS is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_CMDLINE="console=ttyS0,115200 initcall_debug root=/dev/mmcblk0 rw rootwait"
+CONFIG_CMDLINE="console=ttyS0,115200 root=/dev/mmcblk0 rw rootwait"
 CONFIG_KEXEC=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-CONFIG_PM_DEBUG=y
-CONFIG_PM_ADVANCED_DEBUG=y
+CONFIG_PM_DEBUG=n
+CONFIG_PM_ADVANCED_DEBUG=n
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
-#CONFIG_DEBUG_DRIVER=y
-#CONFIG_DEBUG_DEVRES=y
+CONFIG_DEBUG_DRIVER=n
+CONFIG_DEBUG_DEVRES=n
 CONFIG_FENCE_TRACE=y
 CONFIG_DMA_CMA=y
 CONFIG_BLK_DEV_LOOP=y
@@ -70,20 +70,20 @@ CONFIG_SERIAL_ATMEL=y
 CONFIG_SERIAL_ATMEL_CONSOLE=y
 CONFIG_TTY_PRINTK=y
 CONFIG_HW_RANDOM=y
-#CONFIG_I2C_DEBUG_CORE=y
-#CONFIG_I2C_DEBUG_ALGO=y
-#CONFIG_I2C_DEBUG_BUS=y
+CONFIG_I2C_DEBUG_CORE=n
+CONFIG_I2C_DEBUG_ALGO=n
+CONFIG_I2C_DEBUG_BUS=n
 CONFIG_SPI=y
-CONFIG_SPI_DEBUG=y
+CONFIG_SPI_DEBUG=n
 CONFIG_SPI_ATMEL=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_PINCTRL_AT91=y
-#CONFIG_DEBUG_GPIO=y
+CONFIG_DEBUG_GPIO=n
 CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_SUPPLY=y
-#CONFIG_POWER_SUPPLY_DEBUG=y
+CONFIG_POWER_SUPPLY_DEBUG=n
 # CONFIG_HWMON is not set
 CONFIG_WATCHDOG=y
 CONFIG_AT91SAM9X_WATCHDOG=y
@@ -158,27 +158,27 @@ CONFIG_NLS_CODEPAGE_850=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
-#CONFIG_DYNAMIC_DEBUG=y
-#CONFIG_DEBUG_INFO=y
+CONFIG_DYNAMIC_DEBUG=n
+CONFIG_DEBUG_INFO=n
 CONFIG_STRIP_ASM_SYMS=y
-#CONFIG_DEBUG_PAGEALLOC=y
-#CONFIG_DEBUG_OBJECTS=y
-#CONFIG_DEBUG_OBJECTS_SELFTEST=y
-#CONFIG_DEBUG_OBJECTS_FREE=y
-#CONFIG_DEBUG_OBJECTS_TIMERS=y
-#CONFIG_DEBUG_OBJECTS_WORK=y
-#CONFIG_DEBUG_OBJECTS_RCU_HEAD=y
-#CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=y
-#CONFIG_DEBUG_SLAB=y
-#CONFIG_DEBUG_SLAB_LEAK=y
-#CONFIG_DEBUG_KMEMLEAK=y
-#CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
-#CONFIG_DEBUG_VM=y
-#CONFIG_DEBUG_VM_VMACACHE=y
-#CONFIG_DEBUG_VM_RB=y
-#CONFIG_DEBUG_VM_PGFLAGS=y
-#CONFIG_DEBUG_MEMORY_INIT=y
-#CONFIG_DEBUG_SHIRQ=y
+CONFIG_DEBUG_PAGEALLOC=n
+CONFIG_DEBUG_OBJECTS=n
+CONFIG_DEBUG_OBJECTS_SELFTEST=n
+CONFIG_DEBUG_OBJECTS_FREE=n
+CONFIG_DEBUG_OBJECTS_TIMERS=n
+CONFIG_DEBUG_OBJECTS_WORK=n
+CONFIG_DEBUG_OBJECTS_RCU_HEAD=n
+CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=n
+CONFIG_DEBUG_SLAB=n
+CONFIG_DEBUG_SLAB_LEAK=n
+CONFIG_DEBUG_KMEMLEAK=n
+CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
+CONFIG_DEBUG_VM=n
+CONFIG_DEBUG_VM_VMACACHE=n
+CONFIG_DEBUG_VM_RB=n
+CONFIG_DEBUG_VM_PGFLAGS=n
+CONFIG_DEBUG_MEMORY_INIT=n
+CONFIG_DEBUG_SHIRQ=n
 CONFIG_LOCKUP_DETECTOR=y
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
@@ -186,21 +186,21 @@ CONFIG_WQ_WATCHDOG=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_STACK_END_CHECK=y
-#CONFIG_DEBUG_TIMEKEEPING=y
+CONFIG_DEBUG_TIMEKEEPING=n
 CONFIG_TIMER_STATS=y
-#CONFIG_DEBUG_RT_MUTEXES=y
-#CONFIG_DEBUG_LOCK_ALLOC=y
-#CONFIG_DEBUG_LOCKDEP=y
-#CONFIG_DEBUG_KOBJECT=y
-#CONFIG_DEBUG_SG=y
-#CONFIG_DEBUG_NOTIFIERS=y
-#CONFIG_DEBUG_BLOCK_EXT_DEVT=y
+CONFIG_DEBUG_RT_MUTEXES=n
+CONFIG_DEBUG_LOCK_ALLOC=n
+CONFIG_DEBUG_LOCKDEP=n
+CONFIG_DEBUG_KOBJECT=n
+CONFIG_DEBUG_SG=n
+CONFIG_DEBUG_NOTIFIERS=n
+CONFIG_DEBUG_BLOCK_EXT_DEVT=n
 CONFIG_NOTIFIER_ERROR_INJECTION=y
 # CONFIG_FTRACE is not set
 CONFIG_TEST_LKM=m
 CONFIG_KGDB=y
-#CONFIG_DEBUG_USER=y
-#CONFIG_DEBUG_LL=y
+CONFIG_DEBUG_USER=n
+CONFIG_DEBUG_LL=n
 #CONFIG_DEBUG_UART_PHYS=0xf8038200
 #CONFIG_DEBUG_UART_VIRT=0xf7038200
 CONFIG_EARLY_PRINTK=n
