--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -58,12 +58,12 @@
 
 	adc: adc@fc030000 {
 		compatible = "atmel,sama5d2-adc";
-		reg = <0xfc030000 0x100>
-		interrupts = <40 IRQ_TYPE_LEVEL_HIGH 7>
+		reg = <0xfc030000 0x100>;
+		interrupts = <40 IRQ_TYPE_LEVEL_HIGH 7>;
 		clocks = <&adc_clk>;
 		clock-names = "adc_clk";
 		pinctrl-0 = <&pinctrl_adc_default>;
-		status = "okay"
+		status = "okay";
 	};
 };
 
