--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -60,6 +60,8 @@
 	interrupts = <40 IRQ_TYPE_LEVEL_HIGH 7>;
 	clocks = <&adc_clk>;
 	clock-names = "adc_clk";
+	vref-supply = <&vdd_3v3_lp_reg>;
+	vddana-supply = <&vdd_3v3_lp_reg>;
 	pinctrl-0 = <&pinctrl_adc_default>;
 	status = "okay";
 };
