--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -148,6 +148,7 @@ CONFIG_AT_HDMAC=y
 CONFIG_AT_XDMAC=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_IIO=y
+CONFIG_IIO_CONFIGFS=y
 CONFIG_IIO_SW_DEVICE=y
 CONFIG_IIO_SW_TRIGGER=y
 CONFIG_AT91_ADC=y
