--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -214,7 +214,16 @@ CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_DEBUG_KERNEL=n
 CONFIG_INPUT_UINPUT=y
 CONFIG_NET=y
-CONFIG_MESSAGE_LOGLEVEL_DEFAULT=1
+CONFIG_PACKET=y
+CONFIG_UNIX=y
+CONFIG_INET=y
+CONFIG_IP_MULTICAST=y
+CONFIG_IP_PNP=y
+CONFIG_IP_PNP_DHCP=y
+CONFIG_IPV6_SIT_6RD=y
+CONFIG_CFG80211_WEXT=y
+CONFIG_MAC80211=y
+CONFIG_MESSAGE_LOGLEVEL_DEFAULT=7
 CONFIG_CFG80211=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
