--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -54,7 +54,7 @@
 	};
 
 };
-/*Flexcom UART for bluetooth COM*/
+/*Flexcom UART for bluetooth COM
 &flx0 {
 	atmel,flexcom-mode = <ATMEL_FLEXCOM_MODE_USART>;
 	status = "okay";
@@ -82,7 +82,7 @@
 		status = "okay";
 	};
 };
-/*Flexcom with RS232 converter*/
+Flexcom with RS232 converter*/
 &flx1 {
 	atmel,flexcom-mode = <ATMEL_FLEXCOM_MODE_USART>;
 	status = "okay";
@@ -165,13 +165,13 @@
 }
 1-Wire */
 &pioA {
-
+/*
 	pinctrl_flx0_default: flx0_default {
 		pinmux = <PIN_PB28__FLEXCOM0_IO0>,
 			 <PIN_PB29__FLEXCOM0_IO1>;
 		bias-disable;
 	};
-
+*/
 	pinctrl_flx1_default: flx1_default {
 		pinmux = <PIN_PA24__FLEXCOM1_IO0>,
 			 <PIN_PA23__FLEXCOM1_IO1>;
@@ -219,13 +219,12 @@ pinmux = <PIN_PA14__SPI0_SPCK>,
 
 		ck_cd_vddsel {
 			pinmux = <PIN_PA0__SDMMC0_CK>,
-				//<PIN_PA10__SDMMC0_RSTN>,
 				 <PIN_PA11__SDMMC0_VDDSEL>,
 				 <PIN_PA13__SDMMC0_CD>;
 			bias-disable;
 		};
 	};
-
+	/*
 	pinctrl_sdmmc1_default: sdmmc1_default {
 		cmd_data {
 			pinmux = <PIN_PA28__SDMMC1_CMD>,
@@ -243,7 +242,7 @@ pinmux = <PIN_PA14__SPI0_SPCK>,
 			bias-disable;
 		};
 	};
-
+	*/
 	pinctrl_usb_default: usb_default {
 		pinmux = <PIN_PB12__GPIO>;
 		bias-disable;
@@ -264,7 +263,7 @@ pinmux = <PIN_PA14__SPI0_SPCK>,
 	mmc-ddr-1_8v;
 	status = "okay";
 };
-/* Wifi/Bluetooth module */
+/* Wifi/Bluetooth module 
 &sdmmc1 {
 	compatible= "atmel,sama5d2-sdhci";
 	bus-width = <4>;
@@ -275,7 +274,7 @@ pinmux = <PIN_PA14__SPI0_SPCK>,
 	cd-inverted;
 	status = "okay";
 };
-/* UHPHS - Host - OHCI*/
+ UHPHS - Host - OHCI*/
 &usb1 {
 	num-ports = <3>;
 	atmel,vbus-gpio = <0 &pioA PIN_PB12 GPIO_ACTIVE_HIGH 0>;
