Drivers: Added wilc sdio and spi driver.

--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -224,6 +224,7 @@ CONFIG_IP_PNP_DHCP=y
 CONFIG_IPV6_SIT_6RD=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
+CONFIG_WILC_SDIO=y
 
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=7
 CONFIG_CFG80211=y
