--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -1,4 +1,3 @@
-# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_IRQ_DOMAIN_DEBUG=n
 CONFIG_HIGH_RES_TIMERS=y
@@ -235,4 +234,5 @@ CONFIG_BT_HCIUART_MRVL=y
 CONFIG_NETDEVICES=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_SWAP=y
-
+CONFIG_PROFILING=y
+CONFIG_OPROFILE=y
