--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -225,6 +225,7 @@ CONFIG_IPV6_SIT_6RD=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
 CONFIG_WILC_SDIO=y
+CONFIG_EXTRA_FIRMWARE="mchp/wilc3000_wifi_firmware.bin mchp/wilc3000_ble_firmware.bin mchp/wilc3000_ble_firmware_no_rtc.bin"
 
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=7
 CONFIG_CFG80211=y
