--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -274,6 +274,13 @@ pinmux = <PIN_PA14__SPI0_SPCK>,
 	non-removable;
 	cd-inverted;
 	status = "okay";
+	wilc_sdio@0{
+		compatible = "atmel,wilc_sdio";
+		gpio_reset = <0 &pioA PIN_PA27 GPIO_ACTIVE_HIGH 0>;
+		gpio_chip_en = <0 &pioA PIN_PA30 GPIO_ACTIVE_HIGH 0>;
+		gpio_irq = <0 &pioA PIN_PB24 GPIO_ACTIVE_HIGH 0>;
+		status = "okay";
+	};
 };
 /* UHPHS - Host - OHCI*/
 &usb1 {
