--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -213,6 +213,7 @@ CONFIG_USB_UAS=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_DEBUG_KERNEL=n
 CONFIG_INPUT_UINPUT=y
+CONFIG_BLK_DEV_SD=y
 
 CONFIG_NET=y
 CONFIG_PACKET=y
