--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -216,15 +216,15 @@ CONFIG_BLK_DEV_SD=y
 
 CONFIG_NET=y
 CONFIG_PACKET=y
-CONFIG_UNIX=y
-CONFIG_INET=y
-CONFIG_IP_MULTICAST=y
-CONFIG_IP_PNP=y
-CONFIG_IP_PNP_DHCP=y
-CONFIG_IPV6_SIT_6RD=y
-CONFIG_CFG80211_WEXT=y
-CONFIG_MAC80211=y
-CONFIG_WILC_SDIO=y
+#CONFIG_UNIX=y
+#CONFIG_INET=y
+#CONFIG_IP_MULTICAST=y
+#CONFIG_IP_PNP=y
+#CONFIG_IP_PNP_DHCP=y
+#CONFIG_IPV6_SIT_6RD=y
+#CONFIG_CFG80211_WEXT=y
+#CONFIG_MAC80211=y
+# CONFIG_WILC_SDIO is not set
 # CONFIG_WILC_HW_OOB_INTRL is not set
 CONFIG_EXTRA_FIRMWARE="mchp/wilc3000_wifi_firmware.bin mchp/wilc3000_ble_firmware.bin mchp/wilc3000_ble_firmware_no_rtc.bin"
 
@@ -247,7 +247,6 @@ CONFIG_BT_HCIUART_QCA=y
 CONFIG_BT_HCIUART_AG6XX=y
 CONFIG_BT_HCIUART_MRVL=y
 CONFIG_NETDEVICES=y
-CONFIG_BLK_DEV_SD=y
 CONFIG_SWAP=y
 CONFIG_PROFILING=y
 CONFIG_OPROFILE=y
