Config: Support for usb modem.

--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -247,7 +247,12 @@ CONFIG_BT_HCIUART_QCA=y
 CONFIG_BT_HCIUART_AG6XX=y
 CONFIG_BT_HCIUART_MRVL=y
 CONFIG_NETDEVICES=y
-CONFIG_BLK_DEV_SD=y
 CONFIG_SWAP=y
 CONFIG_PROFILING=y
 CONFIG_OPROFILE=y
+CONFIG_USB_SERIAL_OPTION=y
+CONFIG_PPP=y
+CONFIG_USB_GADGET=y
+# CONFIG_USB_CONFIGFS=y
+CONFIG_USB_ETH_EEM=y
+CONFIG_USB_ETH=y
