Config: Added kernel features for Huawei e3531 usb modem support.

--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -254,5 +254,20 @@ CONFIG_USB_SERIAL_OPTION=y
 CONFIG_PPP=y
 CONFIG_USB_GADGET=y
 # CONFIG_USB_CONFIGFS=y
-CONFIG_USB_ETH_EEM=y
+CONFIG_USB_ETH_EEM=n
 CONFIG_USB_ETH=y
+CONFIG_BLK_DEV_SR=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_SERIAL_SIERRAWIRELESS=y
+CONFIG_USB_SIERRA_NET=y
+CONFIG_USB_NET_CDC_NCM=y
+CONFIG_USB_NET_HUAWEI_CDC_NCM=m
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_CDCETHER=y
+CONFIG_MII=y
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_ASYNC=y
+CONFIG_PPP_SYNC_TTY=y
+CONFIG_PPP_DEFLATE=y
+CONFIG_PPP_BSDCOMP=y
