DTS: Fixed atwil pins and added wilc driver.

--- a/arch/arm/boot/dts/p_a5_tab_reva.dts
+++ b/arch/arm/boot/dts/p_a5_tab_reva.dts
@@ -267,13 +267,13 @@ pinmux = <PIN_PA14__SPI0_SPCK>,
 /* Wifi/Bluetooth module */
 &sdmmc1 {
 	compatible= "atmel,sama5d2-sdhci";
-	bus-width = <4>;
+	#address-cells = <1>;
+	#size-cells = <0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sdmmc1_default>;
 	max-frequency = <4000000>;
 	non-removable;
 	status = "okay";
-	/*
 	wilc_sdio@0{
 		compatible = "atmel,wilc_sdio";
 		gpio_reset = <&pioA 27 0>;
@@ -281,7 +281,10 @@ pinmux = <PIN_PA14__SPI0_SPCK>,
 		gpio_irq = <&pioA 56 0>;
 		status = "okay";
 	};
-	*/
+	slot@0 {
+		reg = <0>;
+		bus-width = <4>;
+	};
 };
 /* UHPHS - Host - OHCI*/
 &usb1 {
