--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -294,3 +294,4 @@ CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_IP_NF_ARPTABLES=y
+CONFIG_IP_NF_NAT=y
