Configs: Added missing configurations for iptables support.

--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -275,9 +275,9 @@ CONFIG_BRIDGE=y
 CONFIG_IP6_NF_TARGET_MASQUERADE=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_SYN_COOKIES=y
-CONFIG_INET_AH=m
-CONFIG_INET_ESP=m
-CONFIG_INET_IPCOMP=m
+CONFIG_INET_AH=y
+CONFIG_INET_ESP=y
+CONFIG_INET_IPCOMP=y
 CONFIG_IP6_NF_IPTABLES=y
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_XTABLES=y
@@ -295,3 +295,8 @@ CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_NAT=y
+CONFIG_NF_CONNTRACK_MARK=y
+ CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_BRIDGE_NETFILTER=y
+CONFIG_IP_NF_TARGET_NETMAP=y
