--- a/arch/arm/configs/p_a5_tab_reva_defconfig
+++ b/arch/arm/configs/p_a5_tab_reva_defconfig
@@ -36,6 +36,8 @@ CONFIG_CMDLINE="console=ttyS0,115200 root=/dev/mmcblk0 rw rootwait"
 CONFIG_KEXEC=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
+CONFIG_NEON=y
+CONFIG_KERNEL_MODE_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_PM_DEBUG=n
 CONFIG_PM_ADVANCED_DEBUG=n
